--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
+    "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.8",
@@ -26,9 +28,9 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.3.3",
-    "@types/react-test-renderer": "^18.0.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-native": "^0.73.0",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
