--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "AuthProfileApp",
   "version": "0.0.1",
   "private": true,
+  "workspaces": [
+    "ReactNative/AuthProfileApp"
+  ],
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -16,6 +19,8 @@
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-flags": "^1.0.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.14.0",
