--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.74.3",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-flags": "^1.0.0",
+    "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.14.0",
