--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-config": "^1.5.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.3.3",
